--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,32 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
+  <div class="head">
+    <div class="help"></div>
+    <div class="top"></div>
+    <div class="content">
+      <div class="pfp">
+        <!-- <img src="../assets/woman.jpg" alt="A photo of me"> -->
+        <div class="name">Muchuba Tactics</div>
+      </div>
+      <div class="about">
+        <h3>About me</h3>
+        <article>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut aliquet urna. Cras risus turpis, condimentum eu lorem mollis, accumsan commodo mi. Nullam et diam ac erat tristique bibendum. Curabitur ut ipsum mi. Nam vitae neque orci. Morbi a mauris sit amet dui tincidunt placerat. Aenean molestie tempus consequat. Quisque vulputate purus dui, ac blandit diam varius nec.
+        </article>
+        <div class="icons">
+          <i class="devicon-github-original colored"></i>
+          <i class="devicon-linkedin-plain colored"></i>
+          <i class="devicon-twitter-original colored"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section>
+    <h3>My work</h3>
+    <main>
+      <div class="project"></div>
+    </main>
+  </section>
 </body>
 </html>
