--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,88 @@
   <section>
     <h3>My work</h3>
     <main>
-      <div class="project"></div>
+      <div class="project">
+        <div class="preview" style="background-color: tomato;">
+          screenshot of project
+        </div>
+        <div class="title">
+          <div>Project name</div>
+          <i class="devicon-github-original colored"></i>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+        </div>
+        <article>
+          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+        </article>
+      </div>
+      <div class="project" >
+        <div class="preview" style="background-color: goldenrod;">
+          screenshot of project
+        </div>
+        <div class="title">
+          <div>Project name</div>
+          <i class="devicon-github-original colored"></i>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+        </div>
+        <article>
+          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+        </article>
+      </div>
+      <div class="project">
+        <div class="preview" style="background-color: green;">
+          screenshot of project
+        </div>
+        <div class="title">
+          <div>Project name</div>
+          <i class="devicon-github-original colored"></i>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+        </div>
+        <article>
+          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+        </article>
+      </div>
+      <div class="project">
+        <div class="preview" style="background-color: hotpink;">
+          screenshot of project
+        </div>
+        <div class="title">
+          <div>Project name</div>
+          <i class="devicon-github-original colored"></i>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+        </div>
+        <article>
+          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+        </article>
+      </div>  
+      <div class="project">
+        <div class="preview" style="background-color: yellowgreen;">
+          screenshot of project
+        </div>
+        <div class="title">
+          <div>Project name</div>
+          <i class="devicon-github-original colored"></i>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+        </div>
+        <article>
+          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+        </article>
+      </div>
+      <div class="project">
+        <div class="preview" style="background-color: burlywood;">
+          screenshot of project
+        </div>
+        <div class="title">
+          <div>Project name</div>
+          <i class="devicon-github-original colored"></i>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+        </div>
+        <article>
+          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+        </article>
+      </div>
     </main>
   </section>
+  <footer>
+
+  </footer>
 </body>
 </html>
