--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -113,7 +114,27 @@
     </main>
   </section>
   <footer>
-
+    <div class="contact">
+      <h3>Contact me</h3>
+      <p>Please get in touch if you think our work could be mutually benefial</p>
+      <p>1234 easter egg<br>No such directory, Another easter egg!</p>
+      <div>
+        <div class="call">
+          <span class="material-symbols-outlined">call</span>
+          <span>555-555-555</span>
+        </div>
+        <div class="mail">
+          <span class="material-symbols-outlined">mail</span>
+          <span>muchubatactics@not.real.com</span>
+        </div>
+      </div>
+      <div>
+        <i class="devicon-github-original colored"></i>
+        <i class="devicon-linkedin-plain"></i>
+        <i class="devicon-twitter-original colored"></i>
+      </div>
+    </div>
+    <div class="photo"></div>
   </footer>
 </body>
 </html>
