--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="name">Muchuba Tactics</div>
       </div>
       <div class="about">
+        <div class="simulate"></div>
         <h3>About me</h3>
         <article>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut aliquet urna. Cras risus turpis, condimentum eu lorem mollis, accumsan commodo mi. Nullam et diam ac erat tristique bibendum. Curabitur ut ipsum mi. Nam vitae neque orci. Morbi a mauris sit amet dui tincidunt placerat. Aenean molestie tempus consequat. Quisque vulputate purus dui, ac blandit diam varius nec.
