wide monitor response

--- a/index.html
+++ b/index.html
@@ -9,133 +9,135 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="head">
-    <div class="help"></div>
-    <div class="top"></div>
-    <div class="content">
-      <div class="pfp">
-        <!-- <img src="../assets/woman.jpg" alt="A photo of me"> -->
-        <div class="name">Muchuba Tactics</div>
+  <div class="container">
+    <div class="head">
+      <div class="help"></div>
+      <div class="top"></div>
+      <div class="content">
+        <div class="pfp">
+          <!-- <img src="../assets/woman.jpg" alt="A photo of me"> -->
+          <div class="name">Muchuba Tactics</div>
+        </div>
+        <div class="about">
+          <div class="simulate"></div>
+          <h3>About me</h3>
+          <article>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut aliquet urna. Cras risus turpis, condimentum eu lorem mollis, accumsan commodo mi. Nullam et diam ac erat tristique bibendum. Curabitur ut ipsum mi. Nam vitae neque orci. Morbi a mauris sit amet dui tincidunt placerat. Aenean molestie tempus consequat. Quisque vulputate purus dui, ac blandit diam varius nec.
+          </article>
+          <div class="icons">
+            <i class="devicon-github-original colored"></i>
+            <i class="devicon-linkedin-plain colored"></i>
+            <i class="devicon-twitter-original colored"></i>
+          </div>
+        </div>
       </div>
-      <div class="about">
-        <div class="simulate"></div>
-        <h3>About me</h3>
-        <article>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut aliquet urna. Cras risus turpis, condimentum eu lorem mollis, accumsan commodo mi. Nullam et diam ac erat tristique bibendum. Curabitur ut ipsum mi. Nam vitae neque orci. Morbi a mauris sit amet dui tincidunt placerat. Aenean molestie tempus consequat. Quisque vulputate purus dui, ac blandit diam varius nec.
-        </article>
-        <div class="icons">
+    </div>
+    <section>
+      <h3>My work</h3>
+      <main>
+        <div class="project">
+          <div class="preview" style="background-color: tomato;">
+            screenshot of project
+          </div>
+          <div class="title">
+            <div>Project name</div>
+            <i class="devicon-github-original colored"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+          </div>
+          <article>
+            Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+          </article>
+        </div>
+        <div class="project" >
+          <div class="preview" style="background-color: goldenrod;">
+            screenshot of project
+          </div>
+          <div class="title">
+            <div>Project name</div>
+            <i class="devicon-github-original colored"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+          </div>
+          <article>
+            Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+          </article>
+        </div>
+        <div class="project">
+          <div class="preview" style="background-color: green;">
+            screenshot of project
+          </div>
+          <div class="title">
+            <div>Project name</div>
+            <i class="devicon-github-original colored"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+          </div>
+          <article>
+            Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+          </article>
+        </div>
+        <div class="project">
+          <div class="preview" style="background-color: hotpink;">
+            screenshot of project
+          </div>
+          <div class="title">
+            <div>Project name</div>
+            <i class="devicon-github-original colored"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+          </div>
+          <article>
+            Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+          </article>
+        </div>
+        <div class="project">
+          <div class="preview" style="background-color: yellowgreen;">
+            screenshot of project
+          </div>
+          <div class="title">
+            <div>Project name</div>
+            <i class="devicon-github-original colored"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+          </div>
+          <article>
+            Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+          </article>
+        </div>
+        <div class="project">
+          <div class="preview" style="background-color: burlywood;">
+            screenshot of project
+          </div>
+          <div class="title">
+            <div>Project name</div>
+            <i class="devicon-github-original colored"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
+          </div>
+          <article>
+            Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
+          </article>
+        </div>
+      </main>
+    </section>
+    <footer>
+      <div class="contact">
+        <h3>Contact me</h3>
+        <p>Please get in touch if you think our work could be mutually benefial</p>
+        <p>1234 easter egg<br>No such directory, Another easter egg!</p>
+        <div>
+          <div class="call">
+            <span class="material-symbols-outlined">call</span>
+            <span>555-555-555</span>
+          </div>
+          <div class="mail">
+            <span class="material-symbols-outlined">mail</span>
+            <span>muchubatactics@not.real.com</span>
+          </div>
+        </div>
+        <div>
           <i class="devicon-github-original colored"></i>
-          <i class="devicon-linkedin-plain colored"></i>
+          <i class="devicon-linkedin-plain"></i>
           <i class="devicon-twitter-original colored"></i>
         </div>
       </div>
-    </div>
+      <div class="photo"></div>
+    </footer>
   </div>
-  <section>
-    <h3>My work</h3>
-    <main>
-      <div class="project">
-        <div class="preview" style="background-color: tomato;">
-          screenshot of project
-        </div>
-        <div class="title">
-          <div>Project name</div>
-          <i class="devicon-github-original colored"></i>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
-        </div>
-        <article>
-          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
-        </article>
-      </div>
-      <div class="project" >
-        <div class="preview" style="background-color: goldenrod;">
-          screenshot of project
-        </div>
-        <div class="title">
-          <div>Project name</div>
-          <i class="devicon-github-original colored"></i>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
-        </div>
-        <article>
-          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
-        </article>
-      </div>
-      <div class="project">
-        <div class="preview" style="background-color: green;">
-          screenshot of project
-        </div>
-        <div class="title">
-          <div>Project name</div>
-          <i class="devicon-github-original colored"></i>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
-        </div>
-        <article>
-          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
-        </article>
-      </div>
-      <div class="project">
-        <div class="preview" style="background-color: hotpink;">
-          screenshot of project
-        </div>
-        <div class="title">
-          <div>Project name</div>
-          <i class="devicon-github-original colored"></i>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
-        </div>
-        <article>
-          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
-        </article>
-      </div>  
-      <div class="project">
-        <div class="preview" style="background-color: yellowgreen;">
-          screenshot of project
-        </div>
-        <div class="title">
-          <div>Project name</div>
-          <i class="devicon-github-original colored"></i>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
-        </div>
-        <article>
-          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
-        </article>
-      </div>
-      <div class="project">
-        <div class="preview" style="background-color: burlywood;">
-          screenshot of project
-        </div>
-        <div class="title">
-          <div>Project name</div>
-          <i class="devicon-github-original colored"></i>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-expand</title><path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" /></svg>
-        </div>
-        <article>
-          Fusce vulputate pharetra risus at facilisis. Suspendisse maximus leo dui, at imperdiet massa suscipit pharetra.
-        </article>
-      </div>
-    </main>
-  </section>
-  <footer>
-    <div class="contact">
-      <h3>Contact me</h3>
-      <p>Please get in touch if you think our work could be mutually benefial</p>
-      <p>1234 easter egg<br>No such directory, Another easter egg!</p>
-      <div>
-        <div class="call">
-          <span class="material-symbols-outlined">call</span>
-          <span>555-555-555</span>
-        </div>
-        <div class="mail">
-          <span class="material-symbols-outlined">mail</span>
-          <span>muchubatactics@not.real.com</span>
-        </div>
-      </div>
-      <div>
-        <i class="devicon-github-original colored"></i>
-        <i class="devicon-linkedin-plain"></i>
-        <i class="devicon-twitter-original colored"></i>
-      </div>
-    </div>
-    <div class="photo"></div>
-  </footer>
 </body>
 </html>
